Alpha search Book

--- a/src/lmgtweb/Views/Home/Admin.cshtml
+++ b/src/lmgtweb/Views/Home/Admin.cshtml
@@ -50,6 +50,7 @@
                         <ul class="menu-list">
                             <li id="id_menu_allbooks"><a>All Books</a></li>
                             <li id="id_menu_addnewbook"><a>Add New Book</a></li>
+                            <li id="id_menu_searchbook"><a>Search Book</a></li>
                         </ul>
                         <p class="menu-label">
                             Publisher
