--- a/src/lmgtweb/Views/VBook/BooksList.cshtml
+++ b/src/lmgtweb/Views/VBook/BooksList.cshtml
@@ -16,7 +16,7 @@
                                 <div class="control">
                                     <div class="select">
                                         <select id="id_bookslist_users">
-                                            <option value="0">Select Publisher</option>
+                                            <option value="0">Select User</option>
                                             @{
                                                 foreach(var ur in Model.Users)
                                                 {
