Alpha add logout

--- a/src/lmgtweb/Views/Home/Admin.cshtml
+++ b/src/lmgtweb/Views/Home/Admin.cshtml
@@ -17,7 +17,7 @@
 
                 <div class="navbar-end">
                     <div class="navbar-item">
-                        <div class="button is-primary">
+                        <div class="button is-primary" id="id_main_logout">
                             Log Out
                         </div>
                     </div>
